// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`gux-pagination #render should render as expected (1) 1`] = `
<gux-pagination current-page="1" items-per-page="25" layout="full" total-items="1000">
  <mock:shadow-root>
    <div class="gux-pagination-container">
      <div class="gux-pagination-info">
        <gux-pagination-item-counts current-page="1" items-per-page="25" total-items="1000">
          <div class="gux-pagination-item-counts-container">
            <span class="gux-pagination-item-counts-range">
              1 - 25
            </span>
            <span>
              of 1,000
            </span>
          </div>
        </gux-pagination-item-counts>
        <gux-pagination-items-per-page items-per-page="25">
          <div class="gux-pagination-items-per-page-container">
            <div class="gux-pagination-items-per-page-picker">
              <gux-dropdown-v2-beta>
                <mock:shadow-root>
                  <gux-popup>
                    <div class="gux-target-container-collapsed" slot="target">
                      <button aria-expanded="false" aria-haspopup="listbox" class="gux-field gux-field-button" type="button">
                        <div class="gux-field-content">
                          <div class="gux-selected-option">
                            25
                          </div>
                        </div>
                        <gux-icon class="gux-expand-icon" iconname="chevron-small-down" screenreader-text="Dropdown"></gux-icon>
                      </button>
                    </div>
                    <div class="gux-listbox-container" slot="popup">
                      <slot></slot>
                    </div>
                  </gux-popup>
                </mock:shadow-root>
                <gux-listbox aria-label="Items per page" role="listbox" tabindex="0">
                  <mock:shadow-root>
                    <slot></slot>
                  </mock:shadow-root>
                  <gux-option-v2 aria-disabled="false" aria-selected="true" class="gux-selected" id="gux-option-v2-i" role="option">
                    <!---->
                    25
                  </gux-option-v2>
                  <gux-option-v2 aria-disabled="false" aria-selected="false" id="gux-option-v2-i" role="option">
                    <!---->
                    50
                  </gux-option-v2>
                  <gux-option-v2 aria-disabled="false" aria-selected="false" id="gux-option-v2-i" role="option">
                    <!---->
                    75
                  </gux-option-v2>
                  <gux-option-v2 aria-disabled="false" aria-selected="false" id="gux-option-v2-i" role="option">
                    <!---->
                    100
                  </gux-option-v2>
                </gux-listbox>
              </gux-dropdown-v2-beta>
            </div>
            <div>
              per page
            </div>
          </div>
        </gux-pagination-items-per-page>
      </div>
      <div class="gux-pagination-change">
        <gux-pagination-buttons current-page="1" total-pages="40">
          <div class="gux-full gux-pagination-buttons-container">
            <div class="gux-pagination-buttons-group">
              <gux-button-slot-beta accent="secondary">
                <button disabled="" title="First">
                  <gux-icon decorative="" icon-name="chevron-double-left"></gux-icon>
                </button>
              </gux-button-slot-beta>
              <gux-button-slot-beta accent="secondary">
                <button disabled="" title="Previous">
                  <gux-icon decorative="" icon-name="chevron-small-left"></gux-icon>
                </button>
              </gux-button-slot-beta>
            </div>
            <div class="gux-pagination-buttons-input-container">
              <div>
                Page
              </div>
              <div class="gux-pagination-buttons-input">
                <gux-input-text-like>
                  <input aria-label="Page 1 of 40" slot="input" value="1">
                </gux-input-text-like>
              </div>
              <div>
                of 40
              </div>
            </div>
            <div class="gux-pagination-buttons-group">
              <gux-button-slot-beta accent="secondary">
                <button title="Next">
                  <gux-icon decorative="" icon-name="chevron-small-right"></gux-icon>
                </button>
              </gux-button-slot-beta>
              <gux-button-slot-beta accent="secondary">
                <button title="Last">
                  <gux-icon decorative="" icon-name="chevron-double-right"></gux-icon>
                </button>
              </gux-button-slot-beta>
            </div>
          </div>
        </gux-pagination-buttons>
      </div>
    </div>
  </mock:shadow-root>
</gux-pagination>
`;

exports[`gux-pagination #render should render as expected (2) 1`] = `
<gux-pagination current-page="1" items-per-page="50" layout="full" total-items="1000">
  <mock:shadow-root>
    <div class="gux-pagination-container">
      <div class="gux-pagination-info">
        <gux-pagination-item-counts current-page="1" items-per-page="50" total-items="1000">
          <div class="gux-pagination-item-counts-container">
            <span class="gux-pagination-item-counts-range">
              1 - 50
            </span>
            <span>
              of 1,000
            </span>
          </div>
        </gux-pagination-item-counts>
        <gux-pagination-items-per-page items-per-page="50">
          <div class="gux-pagination-items-per-page-container">
            <div class="gux-pagination-items-per-page-picker">
              <gux-dropdown-v2-beta>
                <mock:shadow-root>
                  <gux-popup>
                    <div class="gux-target-container-collapsed" slot="target">
                      <button aria-expanded="false" aria-haspopup="listbox" class="gux-field gux-field-button" type="button">
                        <div class="gux-field-content">
                          <div class="gux-selected-option">
                            50
                          </div>
                        </div>
                        <gux-icon class="gux-expand-icon" iconname="chevron-small-down" screenreader-text="Dropdown"></gux-icon>
                      </button>
                    </div>
                    <div class="gux-listbox-container" slot="popup">
                      <slot></slot>
                    </div>
                  </gux-popup>
                </mock:shadow-root>
                <gux-listbox aria-label="Items per page" role="listbox" tabindex="0">
                  <mock:shadow-root>
                    <slot></slot>
                  </mock:shadow-root>
                  <gux-option-v2 aria-disabled="false" aria-selected="false" id="gux-option-v2-i" role="option">
                    <!---->
                    25
                  </gux-option-v2>
                  <gux-option-v2 aria-disabled="false" aria-selected="true" class="gux-selected" id="gux-option-v2-i" role="option">
                    <!---->
                    50
                  </gux-option-v2>
                  <gux-option-v2 aria-disabled="false" aria-selected="false" id="gux-option-v2-i" role="option">
                    <!---->
                    75
                  </gux-option-v2>
                  <gux-option-v2 aria-disabled="false" aria-selected="false" id="gux-option-v2-i" role="option">
                    <!---->
                    100
                  </gux-option-v2>
                </gux-listbox>
              </gux-dropdown-v2-beta>
            </div>
            <div>
              per page
            </div>
          </div>
        </gux-pagination-items-per-page>
      </div>
      <div class="gux-pagination-change">
        <gux-pagination-buttons current-page="1" total-pages="20">
          <div class="gux-full gux-pagination-buttons-container">
            <div class="gux-pagination-buttons-group">
              <gux-button-slot-beta accent="secondary">
                <button disabled="" title="First">
                  <gux-icon decorative="" icon-name="chevron-double-left"></gux-icon>
                </button>
              </gux-button-slot-beta>
              <gux-button-slot-beta accent="secondary">
                <button disabled="" title="Previous">
                  <gux-icon decorative="" icon-name="chevron-small-left"></gux-icon>
                </button>
              </gux-button-slot-beta>
            </div>
            <div class="gux-pagination-buttons-input-container">
              <div>
                Page
              </div>
              <div class="gux-pagination-buttons-input">
                <gux-input-text-like>
                  <input aria-label="Page 1 of 20" slot="input" value="1">
                </gux-input-text-like>
              </div>
              <div>
                of 20
              </div>
            </div>
            <div class="gux-pagination-buttons-group">
              <gux-button-slot-beta accent="secondary">
                <button title="Next">
                  <gux-icon decorative="" icon-name="chevron-small-right"></gux-icon>
                </button>
              </gux-button-slot-beta>
              <gux-button-slot-beta accent="secondary">
                <button title="Last">
                  <gux-icon decorative="" icon-name="chevron-double-right"></gux-icon>
                </button>
              </gux-button-slot-beta>
            </div>
          </div>
        </gux-pagination-buttons>
      </div>
    </div>
  </mock:shadow-root>
</gux-pagination>
`;

exports[`gux-pagination #render should render as expected (3) 1`] = `
<gux-pagination current-page="1" items-per-page="75" layout="full" total-items="1000">
  <mock:shadow-root>
    <div class="gux-pagination-container">
      <div class="gux-pagination-info">
        <gux-pagination-item-counts current-page="1" items-per-page="75" total-items="1000">
          <div class="gux-pagination-item-counts-container">
            <span class="gux-pagination-item-counts-range">
              1 - 75
            </span>
            <span>
              of 1,000
            </span>
          </div>
        </gux-pagination-item-counts>
        <gux-pagination-items-per-page items-per-page="75">
          <div class="gux-pagination-items-per-page-container">
            <div class="gux-pagination-items-per-page-picker">
              <gux-dropdown-v2-beta>
                <mock:shadow-root>
                  <gux-popup>
                    <div class="gux-target-container-collapsed" slot="target">
                      <button aria-expanded="false" aria-haspopup="listbox" class="gux-field gux-field-button" type="button">
                        <div class="gux-field-content">
                          <div class="gux-selected-option">
                            75
                          </div>
                        </div>
                        <gux-icon class="gux-expand-icon" iconname="chevron-small-down" screenreader-text="Dropdown"></gux-icon>
                      </button>
                    </div>
                    <div class="gux-listbox-container" slot="popup">
                      <slot></slot>
                    </div>
                  </gux-popup>
                </mock:shadow-root>
                <gux-listbox aria-label="Items per page" role="listbox" tabindex="0">
                  <mock:shadow-root>
                    <slot></slot>
                  </mock:shadow-root>
                  <gux-option-v2 aria-disabled="false" aria-selected="false" id="gux-option-v2-i" role="option">
                    <!---->
                    25
                  </gux-option-v2>
                  <gux-option-v2 aria-disabled="false" aria-selected="false" id="gux-option-v2-i" role="option">
                    <!---->
                    50
                  </gux-option-v2>
                  <gux-option-v2 aria-disabled="false" aria-selected="true" class="gux-selected" id="gux-option-v2-i" role="option">
                    <!---->
                    75
                  </gux-option-v2>
                  <gux-option-v2 aria-disabled="false" aria-selected="false" id="gux-option-v2-i" role="option">
                    <!---->
                    100
                  </gux-option-v2>
                </gux-listbox>
              </gux-dropdown-v2-beta>
            </div>
            <div>
              per page
            </div>
          </div>
        </gux-pagination-items-per-page>
      </div>
      <div class="gux-pagination-change">
        <gux-pagination-buttons current-page="1" total-pages="14">
          <div class="gux-full gux-pagination-buttons-container">
            <div class="gux-pagination-buttons-group">
              <gux-button-slot-beta accent="secondary">
                <button disabled="" title="First">
                  <gux-icon decorative="" icon-name="chevron-double-left"></gux-icon>
                </button>
              </gux-button-slot-beta>
              <gux-button-slot-beta accent="secondary">
                <button disabled="" title="Previous">
                  <gux-icon decorative="" icon-name="chevron-small-left"></gux-icon>
                </button>
              </gux-button-slot-beta>
            </div>
            <div class="gux-pagination-buttons-input-container">
              <div>
                Page
              </div>
              <div class="gux-pagination-buttons-input">
                <gux-input-text-like>
                  <input aria-label="Page 1 of 14" slot="input" value="1">
                </gux-input-text-like>
              </div>
              <div>
                of 14
              </div>
            </div>
            <div class="gux-pagination-buttons-group">
              <gux-button-slot-beta accent="secondary">
                <button title="Next">
                  <gux-icon decorative="" icon-name="chevron-small-right"></gux-icon>
                </button>
              </gux-button-slot-beta>
              <gux-button-slot-beta accent="secondary">
                <button title="Last">
                  <gux-icon decorative="" icon-name="chevron-double-right"></gux-icon>
                </button>
              </gux-button-slot-beta>
            </div>
          </div>
        </gux-pagination-buttons>
      </div>
    </div>
  </mock:shadow-root>
</gux-pagination>
`;

exports[`gux-pagination #render should render as expected (4) 1`] = `
<gux-pagination current-page="1" items-per-page="100" layout="full" total-items="1000">
  <mock:shadow-root>
    <div class="gux-pagination-container">
      <div class="gux-pagination-info">
        <gux-pagination-item-counts current-page="1" items-per-page="100" total-items="1000">
          <div class="gux-pagination-item-counts-container">
            <span class="gux-pagination-item-counts-range">
              1 - 100
            </span>
            <span>
              of 1,000
            </span>
          </div>
        </gux-pagination-item-counts>
        <gux-pagination-items-per-page items-per-page="100">
          <div class="gux-pagination-items-per-page-container">
            <div class="gux-pagination-items-per-page-picker">
              <gux-dropdown-v2-beta>
                <mock:shadow-root>
                  <gux-popup>
                    <div class="gux-target-container-collapsed" slot="target">
                      <button aria-expanded="false" aria-haspopup="listbox" class="gux-field gux-field-button" type="button">
                        <div class="gux-field-content">
                          <div class="gux-selected-option">
                            100
                          </div>
                        </div>
                        <gux-icon class="gux-expand-icon" iconname="chevron-small-down" screenreader-text="Dropdown"></gux-icon>
                      </button>
                    </div>
                    <div class="gux-listbox-container" slot="popup">
                      <slot></slot>
                    </div>
                  </gux-popup>
                </mock:shadow-root>
                <gux-listbox aria-label="Items per page" role="listbox" tabindex="0">
                  <mock:shadow-root>
                    <slot></slot>
                  </mock:shadow-root>
                  <gux-option-v2 aria-disabled="false" aria-selected="false" id="gux-option-v2-i" role="option">
                    <!---->
                    25
                  </gux-option-v2>
                  <gux-option-v2 aria-disabled="false" aria-selected="false" id="gux-option-v2-i" role="option">
                    <!---->
                    50
                  </gux-option-v2>
                  <gux-option-v2 aria-disabled="false" aria-selected="false" id="gux-option-v2-i" role="option">
                    <!---->
                    75
                  </gux-option-v2>
                  <gux-option-v2 aria-disabled="false" aria-selected="true" class="gux-selected" id="gux-option-v2-i" role="option">
                    <!---->
                    100
                  </gux-option-v2>
                </gux-listbox>
              </gux-dropdown-v2-beta>
            </div>
            <div>
              per page
            </div>
          </div>
        </gux-pagination-items-per-page>
      </div>
      <div class="gux-pagination-change">
        <gux-pagination-buttons current-page="1" total-pages="10">
          <div class="gux-full gux-pagination-buttons-container">
            <div class="gux-pagination-buttons-group">
              <gux-button-slot-beta accent="secondary">
                <button disabled="" title="First">
                  <gux-icon decorative="" icon-name="chevron-double-left"></gux-icon>
                </button>
              </gux-button-slot-beta>
              <gux-button-slot-beta accent="secondary">
                <button disabled="" title="Previous">
                  <gux-icon decorative="" icon-name="chevron-small-left"></gux-icon>
                </button>
              </gux-button-slot-beta>
            </div>
            <div class="gux-pagination-buttons-input-container">
              <div>
                Page
              </div>
              <div class="gux-pagination-buttons-input">
                <gux-input-text-like>
                  <input aria-label="Page 1 of 10" slot="input" value="1">
                </gux-input-text-like>
              </div>
              <div>
                of 10
              </div>
            </div>
            <div class="gux-pagination-buttons-group">
              <gux-button-slot-beta accent="secondary">
                <button title="Next">
                  <gux-icon decorative="" icon-name="chevron-small-right"></gux-icon>
                </button>
              </gux-button-slot-beta>
              <gux-button-slot-beta accent="secondary">
                <button title="Last">
                  <gux-icon decorative="" icon-name="chevron-double-right"></gux-icon>
                </button>
              </gux-button-slot-beta>
            </div>
          </div>
        </gux-pagination-buttons>
      </div>
    </div>
  </mock:shadow-root>
</gux-pagination>
`;

exports[`gux-pagination #render should render as expected (5) 1`] = `
<gux-pagination current-page="1" items-per-page="25" layout="full" total-items="1000">
  <mock:shadow-root>
    <div class="gux-pagination-container">
      <div class="gux-pagination-info">
        <gux-pagination-item-counts current-page="1" items-per-page="25" total-items="1000">
          <div class="gux-pagination-item-counts-container">
            <span class="gux-pagination-item-counts-range">
              1 - 25
            </span>
            <span>
              of 1,000
            </span>
          </div>
        </gux-pagination-item-counts>
        <gux-pagination-items-per-page items-per-page="25">
          <div class="gux-pagination-items-per-page-container">
            <div class="gux-pagination-items-per-page-picker">
              <gux-dropdown-v2-beta>
                <mock:shadow-root>
                  <gux-popup>
                    <div class="gux-target-container-collapsed" slot="target">
                      <button aria-expanded="false" aria-haspopup="listbox" class="gux-field gux-field-button" type="button">
                        <div class="gux-field-content">
                          <div class="gux-selected-option">
                            25
                          </div>
                        </div>
                        <gux-icon class="gux-expand-icon" iconname="chevron-small-down" screenreader-text="Dropdown"></gux-icon>
                      </button>
                    </div>
                    <div class="gux-listbox-container" slot="popup">
                      <slot></slot>
                    </div>
                  </gux-popup>
                </mock:shadow-root>
                <gux-listbox aria-label="Items per page" role="listbox" tabindex="0">
                  <mock:shadow-root>
                    <slot></slot>
                  </mock:shadow-root>
                  <gux-option-v2 aria-disabled="false" aria-selected="true" class="gux-selected" id="gux-option-v2-i" role="option">
                    <!---->
                    25
                  </gux-option-v2>
                  <gux-option-v2 aria-disabled="false" aria-selected="false" id="gux-option-v2-i" role="option">
                    <!---->
                    50
                  </gux-option-v2>
                  <gux-option-v2 aria-disabled="false" aria-selected="false" id="gux-option-v2-i" role="option">
                    <!---->
                    75
                  </gux-option-v2>
                  <gux-option-v2 aria-disabled="false" aria-selected="false" id="gux-option-v2-i" role="option">
                    <!---->
                    100
                  </gux-option-v2>
                </gux-listbox>
              </gux-dropdown-v2-beta>
            </div>
            <div>
              per page
            </div>
          </div>
        </gux-pagination-items-per-page>
      </div>
      <div class="gux-pagination-change">
        <gux-pagination-buttons current-page="1" total-pages="40">
          <div class="gux-full gux-pagination-buttons-container">
            <div class="gux-pagination-buttons-group">
              <gux-button-slot-beta accent="secondary">
                <button disabled="" title="First">
                  <gux-icon decorative="" icon-name="chevron-double-left"></gux-icon>
                </button>
              </gux-button-slot-beta>
              <gux-button-slot-beta accent="secondary">
                <button disabled="" title="Previous">
                  <gux-icon decorative="" icon-name="chevron-small-left"></gux-icon>
                </button>
              </gux-button-slot-beta>
            </div>
            <div class="gux-pagination-buttons-input-container">
              <div>
                Page
              </div>
              <div class="gux-pagination-buttons-input">
                <gux-input-text-like>
                  <input aria-label="Page 1 of 40" slot="input" value="1">
                </gux-input-text-like>
              </div>
              <div>
                of 40
              </div>
            </div>
            <div class="gux-pagination-buttons-group">
              <gux-button-slot-beta accent="secondary">
                <button title="Next">
                  <gux-icon decorative="" icon-name="chevron-small-right"></gux-icon>
                </button>
              </gux-button-slot-beta>
              <gux-button-slot-beta accent="secondary">
                <button title="Last">
                  <gux-icon decorative="" icon-name="chevron-double-right"></gux-icon>
                </button>
              </gux-button-slot-beta>
            </div>
          </div>
        </gux-pagination-buttons>
      </div>
    </div>
  </mock:shadow-root>
</gux-pagination>
`;

exports[`gux-pagination #render should render as expected (6) 1`] = `
<gux-pagination current-page="10" items-per-page="25" layout="full" total-items="1000">
  <mock:shadow-root>
    <div class="gux-pagination-container">
      <div class="gux-pagination-info">
        <gux-pagination-item-counts current-page="10" items-per-page="25" total-items="1000">
          <div class="gux-pagination-item-counts-container">
            <span class="gux-pagination-item-counts-range">
              226 - 250
            </span>
            <span>
              of 1,000
            </span>
          </div>
        </gux-pagination-item-counts>
        <gux-pagination-items-per-page items-per-page="25">
          <div class="gux-pagination-items-per-page-container">
            <div class="gux-pagination-items-per-page-picker">
              <gux-dropdown-v2-beta>
                <mock:shadow-root>
                  <gux-popup>
                    <div class="gux-target-container-collapsed" slot="target">
                      <button aria-expanded="false" aria-haspopup="listbox" class="gux-field gux-field-button" type="button">
                        <div class="gux-field-content">
                          <div class="gux-selected-option">
                            25
                          </div>
                        </div>
                        <gux-icon class="gux-expand-icon" iconname="chevron-small-down" screenreader-text="Dropdown"></gux-icon>
                      </button>
                    </div>
                    <div class="gux-listbox-container" slot="popup">
                      <slot></slot>
                    </div>
                  </gux-popup>
                </mock:shadow-root>
                <gux-listbox aria-label="Items per page" role="listbox" tabindex="0">
                  <mock:shadow-root>
                    <slot></slot>
                  </mock:shadow-root>
                  <gux-option-v2 aria-disabled="false" aria-selected="true" class="gux-selected" id="gux-option-v2-i" role="option">
                    <!---->
                    25
                  </gux-option-v2>
                  <gux-option-v2 aria-disabled="false" aria-selected="false" id="gux-option-v2-i" role="option">
                    <!---->
                    50
                  </gux-option-v2>
                  <gux-option-v2 aria-disabled="false" aria-selected="false" id="gux-option-v2-i" role="option">
                    <!---->
                    75
                  </gux-option-v2>
                  <gux-option-v2 aria-disabled="false" aria-selected="false" id="gux-option-v2-i" role="option">
                    <!---->
                    100
                  </gux-option-v2>
                </gux-listbox>
              </gux-dropdown-v2-beta>
            </div>
            <div>
              per page
            </div>
          </div>
        </gux-pagination-items-per-page>
      </div>
      <div class="gux-pagination-change">
        <gux-pagination-buttons current-page="10" total-pages="40">
          <div class="gux-full gux-pagination-buttons-container">
            <div class="gux-pagination-buttons-group">
              <gux-button-slot-beta accent="secondary">
                <button title="First">
                  <gux-icon decorative="" icon-name="chevron-double-left"></gux-icon>
                </button>
              </gux-button-slot-beta>
              <gux-button-slot-beta accent="secondary">
                <button title="Previous">
                  <gux-icon decorative="" icon-name="chevron-small-left"></gux-icon>
                </button>
              </gux-button-slot-beta>
            </div>
            <div class="gux-pagination-buttons-input-container">
              <div>
                Page
              </div>
              <div class="gux-pagination-buttons-input">
                <gux-input-text-like>
                  <input aria-label="Page 10 of 40" slot="input" value="10">
                </gux-input-text-like>
              </div>
              <div>
                of 40
              </div>
            </div>
            <div class="gux-pagination-buttons-group">
              <gux-button-slot-beta accent="secondary">
                <button title="Next">
                  <gux-icon decorative="" icon-name="chevron-small-right"></gux-icon>
                </button>
              </gux-button-slot-beta>
              <gux-button-slot-beta accent="secondary">
                <button title="Last">
                  <gux-icon decorative="" icon-name="chevron-double-right"></gux-icon>
                </button>
              </gux-button-slot-beta>
            </div>
          </div>
        </gux-pagination-buttons>
      </div>
    </div>
  </mock:shadow-root>
</gux-pagination>
`;

exports[`gux-pagination #render should render as expected (7) 1`] = `
<gux-pagination current-page="10" items-per-page="50" layout="full" total-items="1000">
  <mock:shadow-root>
    <div class="gux-pagination-container">
      <div class="gux-pagination-info">
        <gux-pagination-item-counts current-page="10" items-per-page="50" total-items="1000">
          <div class="gux-pagination-item-counts-container">
            <span class="gux-pagination-item-counts-range">
              451 - 500
            </span>
            <span>
              of 1,000
            </span>
          </div>
        </gux-pagination-item-counts>
        <gux-pagination-items-per-page items-per-page="50">
          <div class="gux-pagination-items-per-page-container">
            <div class="gux-pagination-items-per-page-picker">
              <gux-dropdown-v2-beta>
                <mock:shadow-root>
                  <gux-popup>
                    <div class="gux-target-container-collapsed" slot="target">
                      <button aria-expanded="false" aria-haspopup="listbox" class="gux-field gux-field-button" type="button">
                        <div class="gux-field-content">
                          <div class="gux-selected-option">
                            50
                          </div>
                        </div>
                        <gux-icon class="gux-expand-icon" iconname="chevron-small-down" screenreader-text="Dropdown"></gux-icon>
                      </button>
                    </div>
                    <div class="gux-listbox-container" slot="popup">
                      <slot></slot>
                    </div>
                  </gux-popup>
                </mock:shadow-root>
                <gux-listbox aria-label="Items per page" role="listbox" tabindex="0">
                  <mock:shadow-root>
                    <slot></slot>
                  </mock:shadow-root>
                  <gux-option-v2 aria-disabled="false" aria-selected="false" id="gux-option-v2-i" role="option">
                    <!---->
                    25
                  </gux-option-v2>
                  <gux-option-v2 aria-disabled="false" aria-selected="true" class="gux-selected" id="gux-option-v2-i" role="option">
                    <!---->
                    50
                  </gux-option-v2>
                  <gux-option-v2 aria-disabled="false" aria-selected="false" id="gux-option-v2-i" role="option">
                    <!---->
                    75
                  </gux-option-v2>
                  <gux-option-v2 aria-disabled="false" aria-selected="false" id="gux-option-v2-i" role="option">
                    <!---->
                    100
                  </gux-option-v2>
                </gux-listbox>
              </gux-dropdown-v2-beta>
            </div>
            <div>
              per page
            </div>
          </div>
        </gux-pagination-items-per-page>
      </div>
      <div class="gux-pagination-change">
        <gux-pagination-buttons current-page="10" total-pages="20">
          <div class="gux-full gux-pagination-buttons-container">
            <div class="gux-pagination-buttons-group">
              <gux-button-slot-beta accent="secondary">
                <button title="First">
                  <gux-icon decorative="" icon-name="chevron-double-left"></gux-icon>
                </button>
              </gux-button-slot-beta>
              <gux-button-slot-beta accent="secondary">
                <button title="Previous">
                  <gux-icon decorative="" icon-name="chevron-small-left"></gux-icon>
                </button>
              </gux-button-slot-beta>
            </div>
            <div class="gux-pagination-buttons-input-container">
              <div>
                Page
              </div>
              <div class="gux-pagination-buttons-input">
                <gux-input-text-like>
                  <input aria-label="Page 10 of 20" slot="input" value="10">
                </gux-input-text-like>
              </div>
              <div>
                of 20
              </div>
            </div>
            <div class="gux-pagination-buttons-group">
              <gux-button-slot-beta accent="secondary">
                <button title="Next">
                  <gux-icon decorative="" icon-name="chevron-small-right"></gux-icon>
                </button>
              </gux-button-slot-beta>
              <gux-button-slot-beta accent="secondary">
                <button title="Last">
                  <gux-icon decorative="" icon-name="chevron-double-right"></gux-icon>
                </button>
              </gux-button-slot-beta>
            </div>
          </div>
        </gux-pagination-buttons>
      </div>
    </div>
  </mock:shadow-root>
</gux-pagination>
`;

exports[`gux-pagination #render should render as expected (8) 1`] = `
<gux-pagination current-page="10" items-per-page="75" layout="full" total-items="1000">
  <mock:shadow-root>
    <div class="gux-pagination-container">
      <div class="gux-pagination-info">
        <gux-pagination-item-counts current-page="10" items-per-page="75" total-items="1000">
          <div class="gux-pagination-item-counts-container">
            <span class="gux-pagination-item-counts-range">
              676 - 750
            </span>
            <span>
              of 1,000
            </span>
          </div>
        </gux-pagination-item-counts>
        <gux-pagination-items-per-page items-per-page="75">
          <div class="gux-pagination-items-per-page-container">
            <div class="gux-pagination-items-per-page-picker">
              <gux-dropdown-v2-beta>
                <mock:shadow-root>
                  <gux-popup>
                    <div class="gux-target-container-collapsed" slot="target">
                      <button aria-expanded="false" aria-haspopup="listbox" class="gux-field gux-field-button" type="button">
                        <div class="gux-field-content">
                          <div class="gux-selected-option">
                            75
                          </div>
                        </div>
                        <gux-icon class="gux-expand-icon" iconname="chevron-small-down" screenreader-text="Dropdown"></gux-icon>
                      </button>
                    </div>
                    <div class="gux-listbox-container" slot="popup">
                      <slot></slot>
                    </div>
                  </gux-popup>
                </mock:shadow-root>
                <gux-listbox aria-label="Items per page" role="listbox" tabindex="0">
                  <mock:shadow-root>
                    <slot></slot>
                  </mock:shadow-root>
                  <gux-option-v2 aria-disabled="false" aria-selected="false" id="gux-option-v2-i" role="option">
                    <!---->
                    25
                  </gux-option-v2>
                  <gux-option-v2 aria-disabled="false" aria-selected="false" id="gux-option-v2-i" role="option">
                    <!---->
                    50
                  </gux-option-v2>
                  <gux-option-v2 aria-disabled="false" aria-selected="true" class="gux-selected" id="gux-option-v2-i" role="option">
                    <!---->
                    75
                  </gux-option-v2>
                  <gux-option-v2 aria-disabled="false" aria-selected="false" id="gux-option-v2-i" role="option">
                    <!---->
                    100
                  </gux-option-v2>
                </gux-listbox>
              </gux-dropdown-v2-beta>
            </div>
            <div>
              per page
            </div>
          </div>
        </gux-pagination-items-per-page>
      </div>
      <div class="gux-pagination-change">
        <gux-pagination-buttons current-page="10" total-pages="14">
          <div class="gux-full gux-pagination-buttons-container">
            <div class="gux-pagination-buttons-group">
              <gux-button-slot-beta accent="secondary">
                <button title="First">
                  <gux-icon decorative="" icon-name="chevron-double-left"></gux-icon>
                </button>
              </gux-button-slot-beta>
              <gux-button-slot-beta accent="secondary">
                <button title="Previous">
                  <gux-icon decorative="" icon-name="chevron-small-left"></gux-icon>
                </button>
              </gux-button-slot-beta>
            </div>
            <div class="gux-pagination-buttons-input-container">
              <div>
                Page
              </div>
              <div class="gux-pagination-buttons-input">
                <gux-input-text-like>
                  <input aria-label="Page 10 of 14" slot="input" value="10">
                </gux-input-text-like>
              </div>
              <div>
                of 14
              </div>
            </div>
            <div class="gux-pagination-buttons-group">
              <gux-button-slot-beta accent="secondary">
                <button title="Next">
                  <gux-icon decorative="" icon-name="chevron-small-right"></gux-icon>
                </button>
              </gux-button-slot-beta>
              <gux-button-slot-beta accent="secondary">
                <button title="Last">
                  <gux-icon decorative="" icon-name="chevron-double-right"></gux-icon>
                </button>
              </gux-button-slot-beta>
            </div>
          </div>
        </gux-pagination-buttons>
      </div>
    </div>
  </mock:shadow-root>
</gux-pagination>
`;

exports[`gux-pagination #render should render as expected (9) 1`] = `
<gux-pagination current-page="10" items-per-page="100" layout="full" total-items="1000">
  <mock:shadow-root>
    <div class="gux-pagination-container">
      <div class="gux-pagination-info">
        <gux-pagination-item-counts current-page="10" items-per-page="100" total-items="1000">
          <div class="gux-pagination-item-counts-container">
            <span class="gux-pagination-item-counts-range">
              901 - 1,000
            </span>
            <span>
              of 1,000
            </span>
          </div>
        </gux-pagination-item-counts>
        <gux-pagination-items-per-page items-per-page="100">
          <div class="gux-pagination-items-per-page-container">
            <div class="gux-pagination-items-per-page-picker">
              <gux-dropdown-v2-beta>
                <mock:shadow-root>
                  <gux-popup>
                    <div class="gux-target-container-collapsed" slot="target">
                      <button aria-expanded="false" aria-haspopup="listbox" class="gux-field gux-field-button" type="button">
                        <div class="gux-field-content">
                          <div class="gux-selected-option">
                            100
                          </div>
                        </div>
                        <gux-icon class="gux-expand-icon" iconname="chevron-small-down" screenreader-text="Dropdown"></gux-icon>
                      </button>
                    </div>
                    <div class="gux-listbox-container" slot="popup">
                      <slot></slot>
                    </div>
                  </gux-popup>
                </mock:shadow-root>
                <gux-listbox aria-label="Items per page" role="listbox" tabindex="0">
                  <mock:shadow-root>
                    <slot></slot>
                  </mock:shadow-root>
                  <gux-option-v2 aria-disabled="false" aria-selected="false" id="gux-option-v2-i" role="option">
                    <!---->
                    25
                  </gux-option-v2>
                  <gux-option-v2 aria-disabled="false" aria-selected="false" id="gux-option-v2-i" role="option">
                    <!---->
                    50
                  </gux-option-v2>
                  <gux-option-v2 aria-disabled="false" aria-selected="false" id="gux-option-v2-i" role="option">
                    <!---->
                    75
                  </gux-option-v2>
                  <gux-option-v2 aria-disabled="false" aria-selected="true" class="gux-selected" id="gux-option-v2-i" role="option">
                    <!---->
                    100
                  </gux-option-v2>
                </gux-listbox>
              </gux-dropdown-v2-beta>
            </div>
            <div>
              per page
            </div>
          </div>
        </gux-pagination-items-per-page>
      </div>
      <div class="gux-pagination-change">
        <gux-pagination-buttons current-page="10" total-pages="10">
          <div class="gux-full gux-pagination-buttons-container">
            <div class="gux-pagination-buttons-group">
              <gux-button-slot-beta accent="secondary">
                <button title="First">
                  <gux-icon decorative="" icon-name="chevron-double-left"></gux-icon>
                </button>
              </gux-button-slot-beta>
              <gux-button-slot-beta accent="secondary">
                <button title="Previous">
                  <gux-icon decorative="" icon-name="chevron-small-left"></gux-icon>
                </button>
              </gux-button-slot-beta>
            </div>
            <div class="gux-pagination-buttons-input-container">
              <div>
                Page
              </div>
              <div class="gux-pagination-buttons-input">
                <gux-input-text-like>
                  <input aria-label="Page 10 of 10" slot="input" value="10">
                </gux-input-text-like>
              </div>
              <div>
                of 10
              </div>
            </div>
            <div class="gux-pagination-buttons-group">
              <gux-button-slot-beta accent="secondary">
                <button disabled="" title="Next">
                  <gux-icon decorative="" icon-name="chevron-small-right"></gux-icon>
                </button>
              </gux-button-slot-beta>
              <gux-button-slot-beta accent="secondary">
                <button disabled="" title="Last">
                  <gux-icon decorative="" icon-name="chevron-double-right"></gux-icon>
                </button>
              </gux-button-slot-beta>
            </div>
          </div>
        </gux-pagination-buttons>
      </div>
    </div>
  </mock:shadow-root>
</gux-pagination>
`;

exports[`gux-pagination #render should render as expected (10) 1`] = `
<gux-pagination current-page="1" items-per-page="25" layout="small" total-items="1000">
  <mock:shadow-root>
    <div class="gux-pagination-container">
      <div class="gux-pagination-info">
        <gux-pagination-item-counts current-page="1" items-per-page="25" total-items="1000">
          <div class="gux-pagination-item-counts-container">
            <span class="gux-pagination-item-counts-range">
              1 - 25
            </span>
            <span>
              of 1,000
            </span>
          </div>
        </gux-pagination-item-counts>
      </div>
      <div class="gux-pagination-change">
        <gux-pagination-buttons current-page="1" total-pages="40">
          <div class="gux-pagination-buttons-container gux-small">
            <div class="gux-pagination-buttons-group">
              <gux-button-slot-beta accent="secondary">
                <button disabled="" title="First">
                  <gux-icon decorative="" icon-name="chevron-double-left"></gux-icon>
                </button>
              </gux-button-slot-beta>
              <gux-button-slot-beta accent="secondary">
                <button disabled="" title="Previous">
                  <gux-icon decorative="" icon-name="chevron-small-left"></gux-icon>
                </button>
              </gux-button-slot-beta>
            </div>
            <div class="gux-pagination-buttons-spacer"></div>
            <div class="gux-pagination-buttons-group">
              <gux-button-slot-beta accent="secondary">
                <button title="Next">
                  <gux-icon decorative="" icon-name="chevron-small-right"></gux-icon>
                </button>
              </gux-button-slot-beta>
              <gux-button-slot-beta accent="secondary">
                <button title="Last">
                  <gux-icon decorative="" icon-name="chevron-double-right"></gux-icon>
                </button>
              </gux-button-slot-beta>
            </div>
          </div>
        </gux-pagination-buttons>
      </div>
    </div>
  </mock:shadow-root>
</gux-pagination>
`;

exports[`gux-pagination #render should render as expected (11) 1`] = `
<gux-pagination current-page="-3" items-per-page="25" layout="full" total-items="1000">
  <mock:shadow-root>
    <div class="gux-pagination-container">
      <div class="gux-pagination-info">
        <gux-pagination-item-counts current-page="1" items-per-page="25" total-items="1000">
          <div class="gux-pagination-item-counts-container">
            <span class="gux-pagination-item-counts-range">
              1 - 25
            </span>
            <span>
              of 1,000
            </span>
          </div>
        </gux-pagination-item-counts>
        <gux-pagination-items-per-page items-per-page="25">
          <div class="gux-pagination-items-per-page-container">
            <div class="gux-pagination-items-per-page-picker">
              <gux-dropdown-v2-beta>
                <mock:shadow-root>
                  <gux-popup>
                    <div class="gux-target-container-collapsed" slot="target">
                      <button aria-expanded="false" aria-haspopup="listbox" class="gux-field gux-field-button" type="button">
                        <div class="gux-field-content">
                          <div class="gux-selected-option">
                            25
                          </div>
                        </div>
                        <gux-icon class="gux-expand-icon" iconname="chevron-small-down" screenreader-text="Dropdown"></gux-icon>
                      </button>
                    </div>
                    <div class="gux-listbox-container" slot="popup">
                      <slot></slot>
                    </div>
                  </gux-popup>
                </mock:shadow-root>
                <gux-listbox aria-label="Items per page" role="listbox" tabindex="0">
                  <mock:shadow-root>
                    <slot></slot>
                  </mock:shadow-root>
                  <gux-option-v2 aria-disabled="false" aria-selected="true" class="gux-selected" id="gux-option-v2-i" role="option">
                    <!---->
                    25
                  </gux-option-v2>
                  <gux-option-v2 aria-disabled="false" aria-selected="false" id="gux-option-v2-i" role="option">
                    <!---->
                    50
                  </gux-option-v2>
                  <gux-option-v2 aria-disabled="false" aria-selected="false" id="gux-option-v2-i" role="option">
                    <!---->
                    75
                  </gux-option-v2>
                  <gux-option-v2 aria-disabled="false" aria-selected="false" id="gux-option-v2-i" role="option">
                    <!---->
                    100
                  </gux-option-v2>
                </gux-listbox>
              </gux-dropdown-v2-beta>
            </div>
            <div>
              per page
            </div>
          </div>
        </gux-pagination-items-per-page>
      </div>
      <div class="gux-pagination-change">
        <gux-pagination-buttons current-page="1" total-pages="40">
          <div class="gux-full gux-pagination-buttons-container">
            <div class="gux-pagination-buttons-group">
              <gux-button-slot-beta accent="secondary">
                <button disabled="" title="First">
                  <gux-icon decorative="" icon-name="chevron-double-left"></gux-icon>
                </button>
              </gux-button-slot-beta>
              <gux-button-slot-beta accent="secondary">
                <button disabled="" title="Previous">
                  <gux-icon decorative="" icon-name="chevron-small-left"></gux-icon>
                </button>
              </gux-button-slot-beta>
            </div>
            <div class="gux-pagination-buttons-input-container">
              <div>
                Page
              </div>
              <div class="gux-pagination-buttons-input">
                <gux-input-text-like>
                  <input aria-label="Page 1 of 40" slot="input" value="1">
                </gux-input-text-like>
              </div>
              <div>
                of 40
              </div>
            </div>
            <div class="gux-pagination-buttons-group">
              <gux-button-slot-beta accent="secondary">
                <button title="Next">
                  <gux-icon decorative="" icon-name="chevron-small-right"></gux-icon>
                </button>
              </gux-button-slot-beta>
              <gux-button-slot-beta accent="secondary">
                <button title="Last">
                  <gux-icon decorative="" icon-name="chevron-double-right"></gux-icon>
                </button>
              </gux-button-slot-beta>
            </div>
          </div>
        </gux-pagination-buttons>
      </div>
    </div>
  </mock:shadow-root>
</gux-pagination>
`;

exports[`gux-pagination #render should render as expected (12) 1`] = `
<gux-pagination current-page="-3" items-per-page="25" layout="full" total-items="0">
  <mock:shadow-root>
    <div class="gux-pagination-container">
      <div class="gux-pagination-info">
        <gux-pagination-item-counts current-page="0" items-per-page="25" total-items="0">
          <div class="gux-pagination-item-counts-container">
            <span class="gux-pagination-item-counts-range">
              0 - 0
            </span>
            <span>
              of 0
            </span>
          </div>
        </gux-pagination-item-counts>
        <gux-pagination-items-per-page items-per-page="25">
          <div class="gux-pagination-items-per-page-container">
            <div class="gux-pagination-items-per-page-picker">
              <gux-dropdown-v2-beta>
                <mock:shadow-root>
                  <gux-popup>
                    <div class="gux-target-container-collapsed" slot="target">
                      <button aria-expanded="false" aria-haspopup="listbox" class="gux-field gux-field-button" type="button">
                        <div class="gux-field-content">
                          <div class="gux-selected-option">
                            25
                          </div>
                        </div>
                        <gux-icon class="gux-expand-icon" iconname="chevron-small-down" screenreader-text="Dropdown"></gux-icon>
                      </button>
                    </div>
                    <div class="gux-listbox-container" slot="popup">
                      <slot></slot>
                    </div>
                  </gux-popup>
                </mock:shadow-root>
                <gux-listbox aria-label="Items per page" role="listbox" tabindex="0">
                  <mock:shadow-root>
                    <slot></slot>
                  </mock:shadow-root>
                  <gux-option-v2 aria-disabled="false" aria-selected="true" class="gux-selected" id="gux-option-v2-i" role="option">
                    <!---->
                    25
                  </gux-option-v2>
                  <gux-option-v2 aria-disabled="false" aria-selected="false" id="gux-option-v2-i" role="option">
                    <!---->
                    50
                  </gux-option-v2>
                  <gux-option-v2 aria-disabled="false" aria-selected="false" id="gux-option-v2-i" role="option">
                    <!---->
                    75
                  </gux-option-v2>
                  <gux-option-v2 aria-disabled="false" aria-selected="false" id="gux-option-v2-i" role="option">
                    <!---->
                    100
                  </gux-option-v2>
                </gux-listbox>
              </gux-dropdown-v2-beta>
            </div>
            <div>
              per page
            </div>
          </div>
        </gux-pagination-items-per-page>
      </div>
      <div class="gux-pagination-change">
        <gux-pagination-buttons current-page="0" total-pages="0">
          <div class="gux-full gux-pagination-buttons-container">
            <div class="gux-pagination-buttons-group">
              <gux-button-slot-beta accent="secondary">
                <button disabled="" title="First">
                  <gux-icon decorative="" icon-name="chevron-double-left"></gux-icon>
                </button>
              </gux-button-slot-beta>
              <gux-button-slot-beta accent="secondary">
                <button disabled="" title="Previous">
                  <gux-icon decorative="" icon-name="chevron-small-left"></gux-icon>
                </button>
              </gux-button-slot-beta>
            </div>
            <div class="gux-pagination-buttons-input-container">
              <div>
                Page
              </div>
              <div class="gux-pagination-buttons-input">
                <gux-input-text-like>
                  <input aria-label="Page 0 of 0" slot="input" value="0">
                </gux-input-text-like>
              </div>
              <div>
                of 0
              </div>
            </div>
            <div class="gux-pagination-buttons-group">
              <gux-button-slot-beta accent="secondary">
                <button disabled="" title="Next">
                  <gux-icon decorative="" icon-name="chevron-small-right"></gux-icon>
                </button>
              </gux-button-slot-beta>
              <gux-button-slot-beta accent="secondary">
                <button disabled="" title="Last">
                  <gux-icon decorative="" icon-name="chevron-double-right"></gux-icon>
                </button>
              </gux-button-slot-beta>
            </div>
          </div>
        </gux-pagination-buttons>
      </div>
    </div>
  </mock:shadow-root>
</gux-pagination>
`;
